term solver and some farming stuff that i needed

--- a/src/main/resources/assets/meowmayo/lang/en_US.lang
+++ b/src/main/resources/assets/meowmayo/lang/en_US.lang
@@ -2,4 +2,6 @@ key.meowmayo.pet=Open Pets Menu
 key.meowmayo.wardrobe=Open Wardrobe
 key.meowmayo.equipment=Open Equipment Menu
 
+key.meowmayo.pestwarp=Pest Warp
+
 key.categories.meowmayo=MeowMayo
